# MRef

./: .gitignore  CMakeLists.txt  LICENCE.txt  Makefile  Makefile.rules  Makefile.rules_copy  README.md  data_creation.sh  decompose_geometric_matches.py  hive_to_ori.py  install_steps.txt  param_descr.txt
ControlFile/: CMakeLists.txt  ControlReader.cpp  ControlReader.h  ControlRefine.cpp  ControlRefine.h  ControlWriter.cpp  ControlWriter.h  Makefile  test_control.cpp
Convolution/: CMakeLists.txt  Convolution.cpp  Convolution.h  Makefile
FileSystemUtil/: CMakeLists.txt  FDUtil.cpp  FDUtil.h  Makefile
GraphMRF/: CMakeLists.txt  Makefile  graph.cpp  graph.h  lbp_graph.cpp  lbp_graph.h
IOList/: CMakeLists.txt  IOList.cpp  IOList.h  Makefile
LikelihoodImage/: CMakeLists.txt  LikelihoodImage.cpp  LikelihoodImage.h  Makefile
MeshClassify/: CMakeLists.txt  Makefile  MeshMRF.cpp  MeshMRF.h
MeshMetaData/: CMakeLists.txt  Makefile  MeshMetaData.cpp  MeshMetaData.h
MeshRefine/: CMakeLists.txt  Consistency.cpp  DMDI2.cpp  DMDI2.h  DataCopy.cpp  DataCopy.h  GradCalcStereo.cpp  GradCalcStereo.h  GradStraightEdges.cpp  GradStraightEdges.h  GradThinPlate.cpp  GradThinPlate.h  Makefile  MeshRefine.cpp  MeshRefine.h  MeshScaler.cpp  MeshScaler.h  ViewSelector.cpp  ViewSelector.h  test_grad.cpp
MeshUtil/: CMakeLists.txt  Makefile  MeshConv.cpp  MeshConv.h  MeshDivide.cpp  MeshDivide.h  MeshFilter.cpp  MeshFilter.h  MeshGeom.cpp  MeshGeom.h  MeshIO.cpp  MeshIO.h  MeshSimplify.cpp  MeshSimplify.h  MyMesh.h
Ori/: CMakeLists.txt  Makefile  OriGeom.cpp  OriGeom.h  Orientation.cpp  Orientation.h  test_ori.cpp
PRSTimer/: CMakeLists.txt  Makefile  PRSTimer.cpp  PRSTimer.h
RayTracer/: CMakeLists.txt  Makefile  RayTracer.cpp  RayTracer.h  test_tracer.cpp
TfwUtil/: CMakeLists.txt  Makefile  TfwIO.cpp  TfwIO.h
data/: ControlRefine.txt  imglist.txt  likelilist.txt  meshlist.txt  orilist.txt  orilist_2.txt  putative_matches  putative_matches_decomp.txt  sfm_data.json  transforms.json
data/mesh/: trimmed_mesh.mmd
